--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^4.13.1",
+    "gatsby-source-graphql": "^4.13.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
