--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.4",
     "gatsby": "^4.13.1",
+    "gatsby-plugin-material-ui": "4.1",
     "gatsby-source-graphql": "^4.13.0",
+    "gatsby-theme-material-ui": "^5.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
