--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.6.4",
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.13.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-material-ui": "4.1",
     "gatsby-source-graphql": "^4.13.0",
     "gatsby-theme-material-ui": "^5.2.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.1"
   }
 }
