--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "gatsby": "^4.13.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-manifest": "^4.13.0",
     "gatsby-plugin-material-ui": "4.1",
     "gatsby-source-graphql": "^4.13.0",
     "gatsby-theme-material-ui": "^5.2.0",
