--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.6.4",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.13.1",
